trying to fix overflow

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -7,7 +7,6 @@ div.LinkInBio {
   background-color: var(--primary-color);
   color: #ffffff;
   overflow-y: auto;
-  overflow-x: clip;
 
   header {
     display: flex;
